Filetree related events Fix preview close button overlaping recording

--- a/src/app/components/sandbox/sandbox.component.sass
+++ b/src/app/components/sandbox/sandbox.component.sass
@@ -55,6 +55,7 @@
   left: 0px
   width: 100%
   height: 100%
+  z-index: 15
 
 .editorContainer
   position: relative
