--- a/src/app/sub-components/preview/preview.component.sass
+++ b/src/app/sub-components/preview/preview.component.sass
@@ -1,7 +1,7 @@
 .closeBtn 
     position: absolute
     top: 10px
-    right: 10px
+    left: 10px
 
 .container
     position: relative
@@ -21,6 +21,7 @@
 .previewControls
     height: 48px
     padding: 6px
+    padding-left: 96px
 
 .previewUrlField
     width: 640px
